--- a/Web_Hosting/visualization.html
+++ b/Web_Hosting/visualization.html
@@ -76,8 +76,8 @@
 									<div class="flourish-embed flourish-chart" data-src="visualisation/5277461"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
 									<p>&nbsp;&nbsp;다음으로는 서울시 첫 확진자가 발생한 2020년 1월부터 2021년 2월까지 월별 신규 확진자 추이를 바 차트로 시각화하였습니다.  12월의 경우 다른 달에 비해 확진자 발생률이 눈에 띄게 증가한 것을 알 수 있습니다. 이는 12월 19일 발생한 특히 서울 동부구치소에서 발생한 대규모 집단 감염 사태와 연관이 있음을 짐작할 수 있습니다. </p>
 								<h3>2.3. 자치구별 확진자 현황</h3>
-									<span class="image fit"><img class="img fit" src="images/visualization/seoul3.jpg" alt=""/></span>
-									<p>&nbsp;&nbsp;자치구별 확진자 현황을 mapbox 라이브러리를 이용하여 3D 단계 구분도(Choropleth map)으로 나타냈습니다. 확진자가 많이 발생한 강서구와 송파구의 경우 짙은 색과 타 시도에 비해 높이가 높게 매핑된 것을 알 수 있습니다. 옆의 legend는 매핑되는 높이의 범위를 나타냅니다. </p>
+									<span class="image fit"><img class="img fit" src="images/visualization/seoul3.png" alt=""/></span>
+									<p>&nbsp;&nbsp;자치구별 확진자 현황을 mapbox 라이브러리를 이용하여 3D 단계 구분도(Choropleth map)으로 나타냈습니다. 확진자가 많이 발생한 강서구와 송파구의 경우 짙은 색과 타 시도에 비해 높이가 높게 매핑된 것을 알 수 있습니다. </p>
 								<h3>2.4. 서울시 COVID-19 접촉력 빈도수 상위 15항목</h3>
 									<div class="flourish-embed flourish-chart" data-src="visualisation/5282718"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
 									<p>&nbsp;&nbsp;다음으로는 서울시 코로나바이러스 감염증(COVID-19) 접촉력 빈도수 상위 15개 항목을 도넛 차트로 시각화하였습니다. ‘기타 확진자 접촉’이 가장 일어났으며, 그 뒤를 ‘감염경로 조사 중’과 ‘동부구치소 관련’ 항목이 뒤를 잇고 있음을 확인할 수 있습니다. 8월 발생한 성북구 사랑제일교회 집단 감염 사례 역시 높은 빈도를 보이고 있습니다.</p>
