change seoul7 image

--- a/Web_Hosting/visualization.html
+++ b/Web_Hosting/visualization.html
@@ -88,7 +88,7 @@
 									<span class="image fit"><img src="images/visualization/seoul6.jpg" alt=""/></span>
 									<p>&nbsp;&nbsp;다음으로는 해외유입 확진자들이 방문한 상위 10개국을 나타낸 그래프입니다. 미국을 방문했던 확진자들의 비율이 가장 높게 나타난 것을 알 수 있으며,  그 뒤로는 영국과 필리핀, 러시아 순으로 이어집니다. </p>
 								<h3>2.7. 자치구별 해외유입비율</h3>
-									<span class="image fit"><img src="images/visualization/seoul7.jpg" alt=""/></span>
+									<span class="image fit"><img src="images/visualization/seoul7.png" alt=""/></span>
 									<p>&nbsp;&nbsp;마지막으로는 자치구별 전체 확진 수와 해외 유입 확진 수를 비교한 해외유입비율 그래프를 단계 구분도(Choropleth map)으로 나타냈습니다. 해외 입국 혹은 해외 감염의 경우 용산구에서 발생 빈도가 높게 나타났으며, 마포구가 두 번째로 높은 것을 확인할 수 있습니다.</p>
 							</section>
 
